@@ -1,3 +1,9 @@
+2010-08-03  Eric Wasylishen <ewasylishen@gmail.com>
+
+	* Source/win32/WIN32Server.m:
+	Only look at NSUtilityWindowMask to decide whether to use a thin-
+	style title bar (WS_EX_TOOLWINDOW).
+
 2010-07-28 Fred Kiefer <FredKiefer@gmx.de>
 
 	* Source/gsc/GSGState.m (-fillRect:withPattern:): Don't use an
